@antv/gatsby-theme-antv/site/components/Notification.module.less
.notiWrapper {
  width: 50%;
}

.notification {
  width: auto;
  margin-right: 2%;
  .container {
    height: 44px;
    display: flex;
    .number {
      height: 100%;
      width: auto;
    }
    .content {
      padding-left: 20px;
      color: rgba(49, 70, 89, 1);
      text-align: left;
      .description {
        top: 0;
        font-size: 1.14em;
        margin-bottom: 0;
        transition: all 0.3s;
        &:hover {
          color: rgba(89, 126, 247, 1);
        }
      }
      .date {
        color: rgba(216, 203, 249, 1);
        bottom: 0;
        font-size: 1em;
        margin-top: 4px;
        margin-bottom: 0;
      }
    }
  }
}

@media (max-width: 900px) {
  .notiWrapper {
    width: 100%;
    position: absolute;
  }
  .noti0 {
    width: 100%;
    position: absolute;
    animation: showAndHide0 6s infinite;
  }
  .noti1 {
    width: 100%;
    position: absolute;
    top: 44px;
    animation: showAndHide1 6s infinite;
  }
}

@media (max-width: 768px) {
  .notification {
    width: 100%;
  }
}

